ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-service
              port:
                name: http
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: webapp-service
              port:
                name: http
